clusters/raspberrypi/apps/ghost/database/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  namespace: ghost
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      nodeSelector:
        disktype: ssd
      containers:
      - name: mysql
        image: mysql:8
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: mysql-pvc
        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
          limits:
            cpu: "500m"
            memory: "2Gi"
        ports:
        - containerPort: 80
      volumes:
      - name: mysql-pvc
        persistentVolumeClaim:
          claimName: mysql-pvc
