clusters/raspberrypi/apps/ghost/database/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  namespace: ghost
spec:
  ports:
  - port: 80
    protocal: TCP
    targetPort: 8080
  selector:
    app: mysql
