clusters/raspberrypi/apps/ghost/database/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysql-ingress
  namespace: ghost
spec:
  defaultBackend:
    service:
      name: mysql-svc
      port:
        number: 80
  ingressClassName: tailscale
  tls:
  - hosts:
    - mysql
